--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@web3uikit/core": "^0.1.5",
     "@web3uikit/icons": "^0.1.5",
+    "abitype": "^0.4.1",
     "eslint-config-next": "^13.0.6",
     "ethers": "^5.6.9",
     "framer-motion": "^6",
@@ -31,6 +32,7 @@
     "next-auth": "^4.18.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "wagmi": "^0.9.2"
   },
   "devDependencies": {
