update .env.example, and gitignore

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,11 @@ MORALIS_API_KEY= ''
 NEXTAUTH_SECRET= ''
 # replace for production
 NEXTAUTH_URL= http://localhost:3000
+
+
+# Client envs
+NEXT_PUBLIC_USDT_ADDRESS=
+NEXT_PUBLIC_FRG_ADDRESS=
+NEXT_PUBLIC_PET_ADDRESS=
+NEXT_PUBLIC_DEPLOYER_ADDRESS=
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
